--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -7,6 +7,10 @@
     gap: 48px 40px;
 }
 
+.place:last-child {
+    margin-bottom: 0;
+}
+
 @media all and (min-width: 1024px) and (max-width:1279px) {
     .place {
       grid-template-columns: 440px 456px;
