--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,8 +1,30 @@
 .cover__link {
     width: 100%;
+    min-height: 740px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-decoration: none;
+    position: absolute;
 }
+
+.cover__link:hover .cover__background {
+    opacity: .1;
+  }
+
+@media all and (min-width: 1024px) and (max-width:1279px) {
+    .cover__link {
+      min-height: 640px;
+      }
+  }
+  @media all and (min-width: 768px) and (max-width:1023px) {
+    .cover__link {
+      min-height: 480px;
+      }
+  }
+  @media all and (min-width: 320px) and (max-width: 767px) {
+    .cover__link {
+      min-height: 200px;
+      }
+  }
