--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -8,6 +8,7 @@
   font-style: normal;
   font-weight: 900;
   color: #FFFFFF;
+  z-index: 1;
 }
 
 @media all and (min-width: 320px) and (max-width: 767px) {
