--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,12 +1,8 @@
 .cover {
     width: 1184px;
     min-height: 740px;
-    background-image: url(../../images/cover-trains.jpg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
     margin: 92px auto 0;
+    position: relative;
   }
 
   @media all and (min-width: 1024px) and (max-width:1279px) {
