--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -18,6 +18,12 @@
     margin-right: 0;
 }
 
+@media all and (min-width:320px) and (max-width: 764px) {
+    .footer__link {
+        margin-bottom: 32px;
+    }
+}
+
 @media all and (max-width:320px) {
     .footer__link {
         font-size: 24px;
