--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -2,7 +2,13 @@
     display: flex;
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (min-width:320px) and (max-width: 764px) {
+    .footer__links {
+        flex-wrap: wrap;
+    }
+}
+
+@media all and (max-width: 320px) {
     .footer__links {
         flex-direction: column;
     }
