--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
     background-color: #2A2C2F;
-    font-family: 'Inter' 'Arial';
+    font-family: 'Inter', 'Arial';
     overflow:hidden; 
 }
