--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,15 +1,20 @@
 .intro {
     max-width: 690px;
-    margin-top: 114px;
-    margin-left: 100px;
+    margin: 92px 100px 0;
     display: flex;
     align-self: start;
     flex-direction: column;
 }
 
+@media all and (min-width:1024px) and (max-width:1279px) {
+    .intro {
+        margin-left: 48px;
+    }
+}
+
 @media all and (min-width:768px) and (max-width:1023px) {
     .intro {
-        margin: 110px auto 0;
+        margin: 92px auto 0;
         max-width: 720px;
     }
 }
@@ -20,4 +25,3 @@
         margin: 64px auto 0;
     }
 }
-
