--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,18 +1,29 @@
-.cover__link {
-    width: 100%;
-    min-height: 740px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    position: absolute;
-}
+.cover__link { 
+  width: 100%; 
+  min-height: 740px; 
+  display: flex; 
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center; 
+  text-decoration: none; 
+  position: relative;
+  z-index: 1; 
+} 
 
-.cover__link:hover::before  {
+.cover__link::before  {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #2A2C2F;
     opacity: .3;
+    z-index: -1;
   }
 
+.cover__link:hover::before {
+  opacity: .8;
+}
+  
 @media all and (min-width: 1024px) and (max-width:1279px) {
     .cover__link {
       min-height: 640px;
