--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,27 +1,31 @@
-.cover {
-    width: 1184px;
-    min-height: 740px;
-    margin: 92px auto 0;
-    position: relative;
-  }
+.cover { 
+  width: 1184px; 
+  min-height: 740px; 
+  margin: 92px auto 0; 
+  background-image: url(../../images/cover-trains.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+}
 
-  @media all and (min-width: 1024px) and (max-width:1279px) {
-  .cover {
-    width: 1024px;
-    min-height: 640px;
-    }
-}
-@media all and (min-width: 768px) and (max-width:1023px) {
-  .cover {
-    margin: 90px auto 0;
-    width: 768px;
-    min-height: 480px;
-    }
-}
-@media all and (min-width: 320px) and (max-width: 767px) {
-  .cover {
-    margin: 66px auto 0;
-    width: 320px;
-    min-height: 200px;
-    }
-}
+@media all and (min-width: 1024px) and (max-width:1279px) { 
+.cover { 
+  width: 1024px; 
+  min-height: 640px; 
+  } 
+} 
+@media all and (min-width: 768px) and (max-width:1023px) { 
+.cover { 
+  margin: 90px auto 0; 
+  width: 768px; 
+  min-height: 480px; 
+  } 
+} 
+@media all and (min-width: 320px) and (max-width: 767px) { 
+.cover { 
+  margin: 66px auto 0; 
+  width: 320px; 
+  min-height: 200px; 
+  } 
+} 
